# kinect

./: .gitignore  .gitmodules  CMakeLists.txt  README  kinect.rosinstall  rosdep.yaml  stack.xml
freenect/: CMakeLists.txt  Makefile.libfreenect  mainpage.dox  manifest.xml
kinect/: rosdep.yaml
kinect/kinect_camera/: CMakeLists.txt  kinect2x.launch  kinect2x.vcg  kinect2x_nodelets.launch  kinect2x_view.launch  kinect_nodelets.launch  kinect_nodelets.xml  manifest.xml
kinect/kinect_camera/cfg/: Kinect.cfg
kinect/kinect_camera/include/kinect_camera/: kinect.h  kinect_nodelets.h
kinect/kinect_camera/info/: calibration_depth.yaml
kinect/kinect_camera/launch/: kinect_with_tf.launch
kinect/kinect_camera/src/: kinect_driver.cpp  kinect_driver_nodelets.cpp  kinect_node.cpp
kinect_aux/: CMakeLists.txt  mainpage.dox  manifest.xml
kinect_aux/src/: kinect_aux.cpp
kinect_calibration/: CMakeLists.txt  install_calibration.sh  mainpage.dox  manifest.xml
kinect_calibration/src/: acquire_data.cpp  calibrate.cpp
kinect_camera/: CMakeLists.txt  kinect2x.launch  kinect_nodelets.launch  manifest.xml
kinect_camera/cfg/: Kinect.cfg
kinect_camera/include/kinect_camera/: kinect.h
kinect_camera/info/: calibration.yaml  calibration_depth.yaml  calibration_depth_stereo.yaml  calibration_rgb.yaml  calibration_rgb_burrus.yaml  calibration_rgb_stereo.yaml  kinect_params.yaml
kinect_camera/launch/: kinect2x.launch  kinect2x.vcg  kinect2x_view.launch  kinect_node.launch  kinect_nodelets.launch  kinect_with_tf.launch
kinect_camera/src/: calibration_synchronizer.cpp  kinect_driver.cpp  kinect_driver_nodelets.cpp  kinect_node.cpp
kinect_pcl/: CMakeLists.txt  manifest.xml
kinect_pcl/launch/: passthrough.launch  voxelgrid.launch
